19990721-09:30 CET Eddie Runia <eddie@runia>
  * source/vm/hvm.c
    Copy & Paste error

19990721-09:00 CET Jose Lalin
  * source/vm/hvm.c
    + added support for concatenation operator "-"
    + added support to generate correct runtime errors in functions:
    And(), Equal(), Greater(), GreaterEqual(),
    Inc(), Instring(), Less(), LessEqual(), Not(),
    NotEqual(), Minus(), Or(), Plus(), HB_LEN()
  + tests/working/strsub.prg
    tests for operator "-" on strings

19990721-09:00 CET Matthew Hamilton
  * tests/working/inifiles.prg
    * Case sensitive & Speed improvement

19990720-09:38 Alexander Kresin
  * source\hbpp\hbpp.c
    * Fixed bugs related to nested #ifdef, #ifndef
    * Fixed bug with '??' command

19990720-17:15 EDT David G. Holm <dholm@jsd-llc.com>
  * funclist.txt
    * Updated the status of several functions

19990720-20:55 GMT+1 Bruno Cantero <bruno@issnet.net>
  * makefile.b31
    Changed fixflex to bin\fixflex.
  * harbour.b31
    Added /iinclude to compile prg's.

19990720-20:10 CET Eddie Runia <eddie@runia.com>
  * source/vm/hvm.c
    wsize =*( (WORD *) ... part removed.

19990720-13:40 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    * If a color string of ("r/b,b/r" ) is used, the
      fifth param is set equal to the second. (as in clipper)

19990720-13:30 EDT Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtapi.c
    * implimented color attribute in gtWrite and gtScroll.
      This is the last selected color set via gt_ColorSelect()

19990721-16:35 CET David G. Holm <dholm@jsd-llc.com>
  * source/compiler/harbour.y
    ! Correct _StdFunc entty for INKEY to allow no parameters
    - Removed _StdFunc entry for SET
    * Display build date for include/version.h instead of a season

19990721-15:10 CET Felipe Coury
  + bldodbc.bat; hbodbc.b32; source/odbc/bld32exe.bat; source/odbc/harbour.mdb;
    source/odbc/hb32.bat; source/odbc/odbc.c; source/odbc/odbc.txt;